--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,8 @@
-fastapi
-uvicorn
-python-multipart
-pydantic
-pydantic-settings
-openai
-PyPDF2
-python-dotenv
+fastapi>=0.109.0
+uvicorn[standard]>=0.27.0
+python-multipart>=0.0.6
+pydantic>=2.5.0
+pydantic-settings>=2.1.0
+openai>=1.10.0
+PyPDF2>=3.0.1
+python-dotenv>=1.0.0
